# caislean-gaofar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CaisleanGaofar.spec  README.md  camera.py  chest.py  combat.py  config.py  dropped_item.py  dungeon_manager.py  entity.py  entity_manager.py  event_dispatcher.py  experience.py  game.py  game_state_manager.py  grid.py  ground_item.py  hud.py  inventory.py  inventory_ui.py  item.py  loot_table.py  main.py  main_menu.py  monster.py  monster_renderer.py  portal.py  pyproject.toml  run.py  save_game.py  shop.py  shop_ui.py  skill_ui.py  skills.py  temple.py  terrain.py  test_monster_respawn_bug.py  turn_processor.py  (+6 more)
.claude/: settings.local.json
.github/workflows/: qa.yml  release.yml
data/maps/: overworld.json  town.json
docs/: windows_defender_optimization.md
docs/adr/: 0001-entity-system-design.md  0002-inventory-system-architecture.md  0003-game-state-management.md  0004-ui-architecture-pattern.md  0005-uv-dependency-management.md  0006-ty-type-checker-integration.md  0007-town-world-map-portal-system.md  README.md
docs/patterns/: coverage_requirements.md  testing_strategy.md
maps/: ancient_castle.json  dark_cave.json  overworld.json  sample_map.json  town.json
monsters/: __init__.py  banshee.py  base_monster.py  cat_si.py  changeling.py  clurichaun.py  dullahan.py  fear_gorta.py  leprechaun.py  merrow.py  pooka.py  selkie.py
src/caislean_gaofar/core/: config.py  game.py  game_initializer.py  game_loop.py  game_render_coordinator.py  game_state_coordinator.py  game_state_manager.py
src/caislean_gaofar/entities/: entity.py  entity_manager.py  warrior.py
src/caislean_gaofar/entities/monsters/: __init__.py  banshee.py  base_monster.py  cat_si.py  changeling.py  clurichaun.py  dullahan.py  fear_gorta.py  leprechaun.py  merrow.py  pooka.py  selkie.py
src/caislean_gaofar/objects/: chest.py  ground_item.py  item.py  library.py  portal.py  shop.py  temple.py
src/caislean_gaofar/systems/: combat.py  inventory.py  loot_table.py  save_game.py  turn_processor.py
src/caislean_gaofar/ui/: attack_effect.py  hud.py  hud_panels.py  hud_renderer.py  hud_state.py  inventory_input_handler.py  inventory_renderer.py  inventory_state.py  inventory_ui.py  main_menu.py  monster_renderer.py  shop_input_handler.py  shop_renderer.py  shop_state.py  shop_ui.py  skill_ui.py  ui_constants.py  ui_drawing_utils.py  visual_components.py
src/caislean_gaofar/utils/: event_context.py  event_dispatcher.py  grid.py
src/caislean_gaofar/world/: camera.py  dungeon_entrance_renderer.py  dungeon_manager.py  dungeon_transition_manager.py  fog_of_war.py  terrain.py  world_map.py  world_renderer.py
tests/: test_attack_effect.py  test_camera.py  test_chest.py  test_combat.py  test_dropped_item.py  test_dungeon_manager.py  test_entity.py  test_entity_manager.py  test_event_dispatcher.py  test_experience.py  test_fog_of_war.py  test_game.py  test_game_state_manager.py  test_grid.py  test_ground_item.py  test_hud.py  test_improved_world_map.py  test_inventory.py  test_inventory_ui.py  test_item.py  test_loot_table.py  test_main_menu.py  test_map_object_placement.py  test_portal.py  test_run.py  test_save_game.py  test_shop.py  test_skill_ui.py  test_skills.py  test_temple.py  test_terrain.py  test_turn_processor.py  test_ui_button.py  test_visual_components.py  test_warrior.py  test_world_map.py  test_world_renderer.py
tests/core/: test_game.py  test_game_loop.py  test_game_state_coordinator.py  test_game_state_manager.py
tests/entities/: test_entity.py  test_entity_manager.py  test_warrior.py
tests/entities/monsters/: test_banshee.py  test_base_monster.py  test_cat_si.py  test_changeling.py  test_clurichaun.py  test_dullahan.py  test_fear_gorta.py  test_leprechaun.py  test_merrow.py  test_pooka.py  test_selkie.py
tests/monsters/: __init__.py  test_all_monsters.py  test_banshee.py  test_base_monster.py  test_cat_si.py  test_changeling.py  test_clurichaun.py  test_dullahan.py  test_fear_gorta.py  test_leprechaun.py  test_merrow.py  test_pooka.py  test_selkie.py
tests/objects/: test_chest.py  test_ground_item.py  test_item.py  test_library.py  test_portal.py  test_shop.py  test_temple.py
tests/systems/: test_combat.py  test_experience.py  test_inventory.py  test_loot_table.py  test_save_game.py  test_skills.py  test_turn_processor.py
tests/ui/: test_attack_effect.py  test_coverage_edge_cases.py  test_hud.py  test_inventory_renderer.py  test_inventory_ui.py  test_main_menu.py  test_shop_ui.py  test_skill_ui.py  test_ui_button.py  test_ui_drawing_utils.py  test_visual_components.py
tests/utils/: test_event_dispatcher.py  test_grid.py
tests/world/: test_camera.py  test_dungeon_entrance_renderer.py  test_dungeon_manager.py  test_dungeon_transition_manager.py  test_fog_of_war.py  test_improved_world_map.py  test_map_object_placement.py  test_terrain.py  test_world_map.py  test_world_renderer.py
