[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caislean-gaofar"
version = "0.1.0"
description = "PyGame-based action RPG inspired by Castle of the Winds"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v"
]

[tool.coverage.run]
source = ["src/caislean_gaofar"]
branch = true
omit = [
    "tests/*",
    "main.py",
    ".venv/*",
    "venv/*",
    # UI/Rendering code excluded from 100% requirement
    "src/caislean_gaofar/core/game.py",
    "src/caislean_gaofar/ui/inventory_ui.py",
    "src/caislean_gaofar/ui/shop_ui.py",
    "src/caislean_gaofar/ui/monster_renderer.py",
    "src/caislean_gaofar/ui/main_menu.py",
]

[tool.coverage.report]
# Enforce 100% branch coverage on core logic modules
fail_under = 100
precision = 2
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.boa-restrictor]
# Disable Django-specific rules since this is a pygame project (python-only mode)
enable_django_rules = false

# Enable ruff noqa support for better integration
noqa_ruff_support = true

# Disable overly strict Python rules that would require extensive refactoring
exclude = [
    "PBR001",  # Positional arguments discouraged (too strict for this project)
    "PBR002",  # Return type hints required (too strict for this project)
]
